07-microservices-with-eks/1-user-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: usr-app
        image: stacksimplify/kube-usermanagement-microservice:1.0.0
        ports:
        - containerPort: 8095
        livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 8095
            initialDelaySeconds: 60
            periodSeconds: 10
        readinessProbe:
            httpGet:
              path: /usermgmt/health-status
              port: 8095
            initialDelaySeconds: 60
            periodSeconds: 10
