07-microservices-with-eks/3-notification-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-app
  template:
    metadata:
      labels:
        app: notification-app
    spec:
      containers:
      - name: notification-app
        image: stacksimplify/kube-notifications-microservice:1.0.0
        ports:
        - containerPort: 8096
        
        imagePullPolicy: Always
        # env variables of SMTP server and we are using AWS Simple Email Service as a SMTP server
