07-microservices-with-eks/4-notification-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-clusterip-service
spec:
  selector:
    app: notification-app

  ports:
  - port: 8096
    targetPort: 8096
