07-microservices-with-eks/5-notification-SMTP-external-name-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
spec:
   type: ExternalName
   externalName: email-smtp.us-west-2.amazonaws.com
